[package]
name = "rocksfs"
version = "0.1.0"
edition = "2021"
authors = ["Friedel Ziegelmayer <me@dignifiedquire.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/dignifiedquire/rust-rocksfs"
description = "Implementation of RocksFs"


[dependencies]
eyre = "0.6.6"
rocksdb = { git = "https://github.com/dignifiedquire/rust-rocksdb", branch = "feat-blob-options" }

flatfs = { git = "https://github.com/dignifiedquire/rust-flatfs", branch = "main" , optional = true }

[dev-dependencies]
tempfile = "3.3.0"


[features]
default = []
importer = ["flatfs"]
